Remove on-progress content

--- a/index.html
+++ b/index.html
@@ -15,111 +15,26 @@
         <span class="logo-text">Tsadriu</span>
         <div id="nav_holder">
             <a class="nav_el" href="#about-me">About me</a>
-            <a class="nav_el" href="#my-projects">I miei progetti</a>
+            <a class="nav_el" href="#my-projects">My projects</a>
             <a class="nav_el" href="#social">Socials</a>
         </div>
-
-        <div>
-            <div class="row">
-                <div class="desc">
-                    Online users on the discord server.
-                </div>
-                <iframe src="https://discord.com/widget?id=829065976909529088&theme=dark" width="350" height="500"
-                    allowtransparency="true" frameborder="0"
-                    sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-            </div>
-        </div>
-
-        <hr>
-
         <div class="row" id="about-me">
             <h2>About me</h2>
-            <div>
-                Nome: Fabio Oliveira
-            </div>
-            <div>
-                Età: <span title="Ne ho 22..."><i><s>redacted</s></i></span>
-            </div>
-            Cosa mi piace:
-            <ul class="list">
-                <li>Giochi 🎮</li>
-                <li>Programmazione 💻</li>
-                <li>Guardare film 🎞️</li>
-            </ul>
+            TBA
         </div>
 
         <hr>
 
-        <section class="row" id="my-projects">
-            <h2>My projects</h2>
-            <div>
-                <a href="https://gamejolt.com/games/Nestronomus/463568">
-                <img src="assets/images/nestronomus_bg.png" class="games-bg"></a>
-                <span>
-                    - Un piccolo gioco di ruolo a turni, sviluppato tra il 2020 e 2021.
-                </span>
-            </div>
-            <div>
-                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher/releases/tag/V1.5.0">
-                <img src="assets/images/arcadia_bg.jpg" class="games-bg"></a>
-            <span>
-                - A little game created way back in 2017 when I had almost 0 coding knowledge. Created with <a href="https://gamemaker.io/en">Game Maker Studio 2</a>.
-            </span>
-            </div>
-            <div>
-                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher/releases/tag/V1.5.0">
-                <img src="assets/images/flyffBg.png" class="games-bg"></a>
-                <span>
-                    - Un piccolo launcher per avviare più istanze del gioco <a href="https://universe.flyff.com">Flyff Universe</a>.
-                </span>
-            </div>
-            <div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities">
-                <img src="assets/images/nuget.svg" class="games-bg"></a>
-                <span>
-                    - A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> library with various utilities.
-                </span>
-            </div>
-            <div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel">
-                <img src="assets/images/nuget.svg" class="games-bg"></a>
-                <span>
-                    - A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> library that helps on reading XLSX files.
-                </span>
-            </div>
-            <div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv">
-                <img src="assets/images/nuget.svg" class="games-bg"></a>
-                <span>
-                    - A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> library that helps on reading and/or generating CSV files.
-                </span>
-            </div>
+        <h2 class="row">My projects</h2>
+        <section class="projects-section" id="my-projects">
+            TBA
         </section>
 
         <hr>
 
         <section class="row" id="social">
             <h2>Socials</h2>
-            <div class="social">
-                <div>
-                    <i class="fa-brands fa-discord"></i>- Tsadriu#4121
-                </div>
-                <div>
-                    <a href="https://github.com/Tsadriu">
-                        <i class="fa-brands fa-github"></i>
-                    </a>- Github
-                </div>
-                <div>
-                    <a href="https://www.patreon.com/Nestronomus">
-                        <i class="fa-brands fa-patreon"></i>
-                    </a> - Patreon
-                </div>
-                <div>
-                    <a href="https://www.youtube.com/channel/UCq8W_jPeTesxtdQCu4tAgYg">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a> - Youtube
-                </div>
-            </div>
+            TBA
         </section>
     </div>
 </body>
