Removed destiny bg, added simple animation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <div class="container">
-        <img src="assets/images/logo.png" class="logo">
-        <span class="logo-text">Tsadriu</span>
+    <div class="container shadow">
+        <img src="assets/images/logo.png" class="logo shadow">
+        <span class="logo-desc flex">
+            <i>Tsadriu</i>
+        </span>
         <div id="nav_holder">
             <a class="nav_el" href="#about-me">About me</a>
             <a class="nav_el" href="#my-projects">My projects</a>
