Updated My Project section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>
@@ -11,14 +12,15 @@
 
 <body>
     <div class="container shadow">
+        <span id="clock" class="flex" onload="currentTime()"></span>
         <img src="assets/images/logo.png" class="logo shadow">
         <span class="logo-desc flex">
             <i>Tsadriu</i>
         </span>
-        <div id="nav_holder">
-            <a class="nav_el" href="#about-me">About me</a>
-            <a class="nav_el" href="#my-projects">My projects</a>
-            <a class="nav_el" href="#social">Socials</a>
+        <div id="nav-holder" class="flex">
+            <a class="nav-el" href="#about-me">About me</a>
+            <a class="nav-el" href="#my-projects">My projects</a>
+            <a class="nav-el" href="#social">Socials</a>
         </div>
         <div class="row" id="about-me">
             <h2>About me</h2>
@@ -27,9 +29,33 @@
 
         <hr>
 
-        <h2 class="row">My projects</h2>
-        <section class="projects-section" id="my-projects">
-            TBA
+        <h2>>> My projects <<</h2>
+        <section class="projects flex">
+            <div class="project-desc">
+                <img src="assets/images/arcadia_bg.jpg" class="project-img">
+                A small 2D hack-and-slash game developed way back in 2017 when I had little to no experience in coding.
+                Created with <a href="https://gamemaker.io/en">Game Maker Studio 2</a>.
+            </div>
+            <div class="project-desc">
+                <a href="https://gamejolt.com/games/Nestronomus/463568"><img src="assets/images/nestronomus_bg.png" class="project-img"></a>
+                A small 2D turn-based RPG game developed between 2020 and 2021 using C# and Unity.
+            </div>
+            <div class="project-desc">
+                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher"><img src="assets/images/flyffBg.png" class="project-img"></a>
+                A C# WinForms application that can be used to load more instances of the game <a href="https://universe.flyff.com/">Flyff Universe</a>.
+            </div>
+            <div class="project-desc">
+                <a href="https://www.nuget.org/packages/TsadriuUtilities"><img src="assets/images/setting_bg.png" class="project-img"></a>
+                A C# library that has many utilities to manipulate strings, numbers and more.
+            </div>
+            <div class="project-desc">
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel"><img src="assets/images/excel_bg.png" class="project-img"></a>
+                A C# library that helps on reading <b>XLSX</b> files.
+            </div>
+            <div class="project-desc">
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv"><img src="assets/images/csv_bg.png" class="project-img"></a>
+                A C# library that helps on reading or creating a <b>CSV</b> file.
+            </div>
         </section>
 
         <hr>
@@ -39,6 +65,6 @@
             TBA
         </section>
     </div>
+<script src="index.js"></script>
 </body>
-
 </html>
