Resized project icons and text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <hr>
 
-        <h2>>> My projects <<</h2>
+        <h2 id="my-projects">>> My projects <<</h2>
         <section class="projects flex">
             <div class="project-desc">
                 <img src="assets/images/arcadia_bg.jpg" class="project-img">
