Animation on anchors

--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
 
         <hr>
 
-        <h2 id="my-projects">>> My projects <<</h2>
+        <h2 id="my-projects" class="flex">My projects</h2>
         <section class="projects flex">
             <div class="project-desc">
                 <img src="assets/images/arcadia_bg.jpg" class="project-img">
                 A small 2D hack-and-slash game developed way back in 2017 when I had little to no experience in coding.
-                Created with <a href="https://gamemaker.io/en">Game Maker Studio 2</a>.
+                Developed with <a href="https://gamemaker.io/en">Game Maker Studio 2</a>.
             </div>
             <div class="project-desc">
                 <a href="https://gamejolt.com/games/Nestronomus/463568"><img src="assets/images/nestronomus_bg.png" class="project-img"></a>
-                A small 2D turn-based RPG game developed between 2020 and 2021 using C# and Unity.
+                A small 2D turn-based RPG game developed between 2020 and 2021 using <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> and <a href="https://unity.com/">Unity</a>.
             </div>
             <div class="project-desc">
                 <a href="https://github.com/Tsadriu/FlyffUniverseLauncher"><img src="assets/images/flyffBg.png" class="project-img"></a>
-                A C# WinForms application that can be used to load more instances of the game <a href="https://universe.flyff.com/">Flyff Universe</a>.
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022">Windows Forms application</a> that can be used to load more instances of the game <a href="https://universe.flyff.com/">Flyff Universe</a>.
             </div>
             <div class="project-desc">
                 <a href="https://www.nuget.org/packages/TsadriuUtilities"><img src="assets/images/setting_bg.png" class="project-img"></a>
-                A C# library that has many utilities to manipulate strings, numbers and more.
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> library that has many utilities to manipulate strings, numbers and more.
             </div>
             <div class="project-desc">
                 <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel"><img src="assets/images/excel_bg.png" class="project-img"></a>
-                A C# library that helps on reading <b>XLSX</b> files.
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> library that helps on reading <b>XLSX</b> files.
             </div>
             <div class="project-desc">
                 <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv"><img src="assets/images/csv_bg.png" class="project-img"></a>
-                A C# library that helps on reading or creating a <b>CSV</b> file.
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> library that helps on reading or creating a <b>CSV</b> file.
             </div>
         </section>
 
