--- a/index.html
+++ b/index.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/images/logo.png">
     <title>
-        Main Page
+        Tsadriu - Fabio Oliveira
     </title>
 </head>
 
 <body>
     <div class="container shadow">
         <span id="clock" class="flex" onload="currentTime()"></span>
-        <img src="assets/images/logo.png" class="logo shadow">
+        <span id="github" class="flex"><a href="https://github.com/Tsadriu">My GitHub</a></span>
+            <img src="assets/images/logo.png" class="logo shadow">
         <span class="logo-desc flex">
             <i>Tsadriu</i>
         </span>
         <div id="nav-holder" class="flex">
             <a class="nav-el" href="#about-me">About me</a>
+            <a class="nav-el" href="#skill">Skills</a>
             <a class="nav-el" href="#my-projects">My projects</a>
-            <a class="nav-el" href="#social">Socials</a>
+            <a class="nav-el" href="#contacts">Contact me</a>
         </div>
-        <div class="row" id="about-me">
+        <div id="about-me">
             <h2>About me</h2>
-            TBA
+            Hello there, I'm Fabio Oliveira, a 22-year-old CS student that lives in Switzerland.
+        </div>
+
+        <br>
+        <hr>
+
+        <div id="skill">
+            <h2>My skills</h2>
+            <ul>
+                <li>Java since 2017.</li>
+                <li>C# since 2020.</li>
+                <li>HTML, CSS and JS since 2022.</li>
+            </ul>
         </div>
 
         <hr>
@@ -58,11 +73,16 @@
             </div>
         </section>
 
+        <br>
         <hr>
 
-        <section class="row" id="social">
+        <section class="row" id="contacts">
             <h2>Socials</h2>
-            TBA
+            Find me on:
+            <ul>
+                <li>Email: <a href="mailto:fabiosousa15@live.com.pt">fabiosousa15 [at] live [dot] com [dot] pt</a></li>
+                <li>Discord: Tsadriu#4121</li>
+            </ul>
         </section>
     </div>
 <script src="index.js"></script>
