Updated HTML and CSS
CSS:
 - Given updates to CSS code providede by @Ale32bit
- Updated hover animation of the project descriptions
- Implemented scroll down animation.

HTML:
- Added Linkedin info

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <ul>
                 <li><i class="fa fa-envelope"></i> Email: <a href="mailto:fabiosousa15@live.com.pt">fabiosousa15 [at] live [dot] com [dot] pt</a></li>
                 <li><i class="fa-brands fa-discord"></i> Discord: Tsadriu#4121</li>
+                <li><i class="fa-brands fa-linkedin-in"></i> Linkedin: <a href="https://www.linkedin.com/in/fabio-oliveira-de-sousa-2328a21b5/">Fabio Oliveira</a></li>
             </ul>
         </section>
     </div>
