--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/images/logo_round.png">
+    <link rel="icon" href="../../assets/images/logo_round.png">
     <title>
         Tsadriu - Fabio Oliveira
     </title>
@@ -15,13 +15,13 @@
     <div class="container shadow">
         <span id="clock" class="flex" onload="currentTime()"></span>
         <span id="github" class="flex"><a href="https://github.com/Tsadriu" target="_blank"><i class="fa-brands fa-github"></i> MY GITHUB</a></span>
-            <img src="assets/images/logo.png" class="logo shadow">
+            <img src="../../assets/images/logo.png" class="logo shadow">
         <span class="logo-desc flex">
             <i>Tsadriu</i>
         </span>
         <div id="nav-holder" class="flex">
             <a class="nav-el" href="#about-me">About me</a>
-            <a class="nav-el" href="#skill">Skills</a>
+            <a class="nav-el" href="#skill">My skills</a>
             <a class="nav-el" href="#my-projects">My projects</a>
             <a class="nav-el" href="#contacts">Contact me</a>
         </div>
@@ -36,9 +36,10 @@
         <div id="skill">
             <h2>My skills</h2>
             <ul>
-                <li>Java since 2017.</li>
-                <li>C# since 2020.</li>
-                <li>HTML, CSS and JS since 2022.</li>
+                <li><b><a href="https://manual.yoyogames.com/GameMaker_Language.htm" target="_blank">GML</a></b> in 2016, but barely any knowledge of it is left.</li>
+                <li><b><a href="https://docs.oracle.com/javase/8/docs/technotes/guides/language/index.html" target="_blank">Java</a></b> in 2017 and still using it in school.</li>
+                <li><b><a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a></b> in 2020 and still using it for personal projects.</li>
+                <li><b><a href="https://www.w3schools.com/html/" target="_blank">HTML</a></b>, <b><a href="https://www.w3schools.com/css/" target="_blank">CSS</a></b> and <b><a href="https://www.w3schools.com/js/" target="_blank">JS</a></b> in 2022 and still using it in school and/or personal projects.</li>
             </ul>
         </div>
 
@@ -48,33 +49,33 @@
         <section class="projects flex">
             <div class="project-desc">
                 <div class="project-title">ARCADIA</div>
-                <img src="assets/images/arcadia_bg.jpg" class="project-img">
+                <a href="../arcadia/arcadia.html"><img src="../../assets/images/arcadia_bg.jpg" class="project-img"></a>
                 A small 2D hack-and-slash game developed way back in 2017 when I had little to no experience in coding.
                 Developed with <a href="https://gamemaker.io/en" target="_blank">Game Maker Studio 2</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">NESTRONOMUS</div>
-                <a href="https://gamejolt.com/games/Nestronomus/463568" target="_blank"><img src="assets/images/nestronomus_bg.png" class="project-img"></a>
+                <a href="https://gamejolt.com/games/Nestronomus/463568" target="_blank"><img src="../../assets/images/nestronomus_bg.png" class="project-img"></a>
                 A small 2D turn-based RPG game developed between 2020 and 2021 using <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> and <a href="https://unity.com/" target="_blank">Unity</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">FLYFF UL</div>
-                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="assets/images/flyffBg.png" class="project-img"></a>
+                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="../../assets/images/flyffBg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that can be used to load more instances of the game <a href="https://universe.flyff.com/" target="_blank">Flyff Universe</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities" target="_blank"><img src="assets/images/setting_bg.png" class="project-img"></a>
+                <a href="https://www.nuget.org/packages/TsadriuUtilities" target="_blank"><img src="../../assets/images/setting_bg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that has many utilities to manipulate strings, numbers and more.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES.EXCEL</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel" target="_blank"><img src="assets/images/excel_bg.png" class="project-img"></a>
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel" target="_blank"><img src="../../assets/images/excel_bg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps on reading <b>XLSX</b> files.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES.CSV</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv" target="_blank"><img src="assets/images/csv_bg.png" class="project-img"></a>
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv" target="_blank"><img src="../../assets/images/csv_bg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps on reading or creating a <b>CSV</b> file.
             </div>
         </section>
@@ -83,7 +84,7 @@
         <hr>
 
         <section class="row" id="contacts">
-            <h2>Socials</h2>
+            <h2>Contact me</h2>
             Find me on:
             <ul>
                 <li><i class="fa fa-envelope"></i> Email: <a href="mailto:fabiosousa15@live.com.pt">fabiosousa15 [at] live [dot] com [dot] pt</a></li>
@@ -92,6 +93,6 @@
             </ul>
         </section>
     </div>
-<script src="index.js"></script>
+<script src="../../index.js"></script>
 </body>
 </html>
