Updated location of index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="../index/style.css">
-    <link rel="icon" href="../../assets/images/logo_round.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/images/logo_round.png">
     <title>
         Tsadriu - Fabio Oliveira
     </title>
@@ -15,7 +15,7 @@
     <div class="container shadow">
         <span id="clock" class="flex" onload="currentTime()"></span>
         <span id="github" class="flex"><a href="https://github.com/Tsadriu" target="_blank"><i class="fa-brands fa-github"></i> MY GITHUB</a></span>
-            <img src="../../assets/images/logo.png" class="logo shadow">
+            <img src="assets/images/logo.png" class="logo shadow">
         <span class="logo-desc flex">
             <i>Tsadriu</i>
         </span>
@@ -49,33 +49,33 @@
         <section class="projects flex">
             <div class="project-desc">
                 <div class="project-title">ARCADIA</div>
-                <a href="../arcadia/arcadia.html"><img src="../../assets/images/arcadia_bg.jpg" class="project-img"></a>
+                <a href="pages/arcadia/arcadia.html"><img src="assets/images/arcadia_bg.jpg" class="project-img"></a>
                 A small 2D hack-and-slash game developed way back in 2017 when I had little to no experience in coding.
                 Developed with <a href="https://gamemaker.io/en" target="_blank">Game Maker Studio 2</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">NESTRONOMUS</div>
-                <a href="https://gamejolt.com/games/Nestronomus/463568" target="_blank"><img src="../../assets/images/nestronomus_bg.png" class="project-img"></a>
+                <a href="https://gamejolt.com/games/Nestronomus/463568" target="_blank"><img src="assets/images/nestronomus_bg.png" class="project-img"></a>
                 A small 2D turn-based RPG game developed between 2020 and 2021 using <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> and <a href="https://unity.com/" target="_blank">Unity</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">FLYFF UL</div>
-                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="../../assets/images/flyffBg.png" class="project-img"></a>
+                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="assets/images/flyffBg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that can be used to load more instances of the game <a href="https://universe.flyff.com/" target="_blank">Flyff Universe</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities" target="_blank"><img src="../../assets/images/setting_bg.png" class="project-img"></a>
+                <a href="https://www.nuget.org/packages/TsadriuUtilities" target="_blank"><img src="assets/images/setting_bg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that has many utilities to manipulate strings, numbers and more.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES.EXCEL</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel" target="_blank"><img src="../../assets/images/excel_bg.png" class="project-img"></a>
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel" target="_blank"><img src="assets/images/excel_bg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps on reading <b>XLSX</b> files.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES.CSV</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv" target="_blank"><img src="../../assets/images/csv_bg.png" class="project-img"></a>
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv" target="_blank"><img src="assets/images/csv_bg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps on reading or creating a <b>CSV</b> file.
             </div>
         </section>
@@ -93,6 +93,6 @@
             </ul>
         </section>
     </div>
-<script src="../../index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
