--- a/pages/arcadia/arcadia.html
+++ b/pages/arcadia/arcadia.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </section>
-        <a href="../index/index.html"><i class="fa fa-arrow-left" aria-hidden="true"> Go back</i></a>
+        <a href="../../index.html"><i class="fa fa-arrow-left" aria-hidden="true"> Go back</i></a>
     </div>
 <script src="../../index.js"></script>
 </body>
