--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="projects flex">
             <div class="project-desc">
                 <div class="project-title">ARCADIA</div>
-                <a href="pages/arcadia/arcadia.html"><img src="assets/images/arcadia_bg.jpg" class="project-img"></a>
+                <a href="pages/arcadia/index.html"><img src="assets/images/arcadia_bg.jpg" class="project-img"></a>
                 A small 2D hack-and-slash game developed way back in 2017 when I had little to no experience in coding.
                 Developed with <a href="https://gamemaker.io/en" target="_blank">Game Maker Studio 2</a>.
             </div>
@@ -61,7 +61,7 @@
                 A small 2D turn-based RPG game developed between 2020 and 2021 using <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> and <a href="https://unity.com/" target="_blank">Unity</a>.
             </div>
             <div class="project-desc">
-                <div class="project-title">FLYFF UL</div>
+                <div class="project-title">FLYFF UNIVERSE LAUNCHER</div>
                 <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="assets/images/flyffBg.png" class="project-img"></a>
                 A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that can be used to load more instances of the game <a href="https://universe.flyff.com/"
                                                                                                                                                                                                                                                                                                                        target="_blank">Flyff Universe</a>.
@@ -98,7 +98,7 @@
     </div>
 
     <div>
-        <i id="goTopButton" class="fa fa-arrow-up" aria-hidden="true" onclick="goTopPage()"> Up</i>
+        <i id="goTopButton" class="fa fa-arrow-up" aria-hidden="true" onclick="goTopPage()"></i>
     </div>
 </div>
 <script src="index.js"></script>
