Added DIM project and removed Clock

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 <div class="container shadow">
-    <span id="clock" class="flex" onload="currentTime()"></span>
     <span id="github" class="flex"><a href="https://github.com/Tsadriu" target="_blank"><i class="fa-brands fa-github"></i> MY GITHUB</a></span>
     <img src="assets/images/logo.png" class="logo shadow">
     <span class="logo-desc flex">
@@ -62,9 +61,13 @@
             </div>
             <div class="project-desc">
                 <div class="project-title">FLYFF UNIVERSE LAUNCHER</div>
-                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="assets/images/flyffBg.png" class="project-img"></a>
-                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that can be used to load more instances of the game <a href="https://universe.flyff.com/"
-                                                                                                                                                                                                                                                                                                                       target="_blank">Flyff Universe</a>.
+                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="assets/images/flyff_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that can be used to load more instances of the game <a href="https://universe.flyff.com/" target="_blank">Flyff Universe</a>.
+            </div>
+            <div class="project-desc">
+                <div class="project-title">DIM<br/>MULTI-CLIENT</div>
+                <a href="https://github.com/Tsadriu/DIM_MultiClient" target="_blank"><img src="assets/images/dim_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that allows the user to launch more instances of <a href="https://destinyitemmanager.com/en/" target="_blank">DIM</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES</div>
