--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
     <div>
         <h2 id="about-me">About me</h2>
-        Hey there! I'm Fabio Oliveira, a 22-year-old programmer with a love for coding that began in 2016. Currently, I'm in my third year of a computer programming apprenticeship.<br/>
-        When I'm not coding, you can find me playing Destiny 2 or spending time with my friends.<br/>
-        One of my dreams is to successfully create a game using Unity, and I'm constantly working towards that goal.
+        Hey! I'm Fabio Oliveira, a 22-year-old programmer who caught the coding bug back in 2016. Right now, I'm in my fourth and final year of a computer programming apprenticeship.<br/>
+        When coding's not taking up my time, I'm diving into Destiny 2, Overwatch, or just hanging out with my friends in Discord.<br/>
+        I've got this dream since I was a child of creating a with Unity, and I'm putting in the work to make it happen (when work is not draining all of my energy).
     </div>
     <br>
     <hr>
