--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div>
         <h2 id="about-me">About me</h2>
-        Hey! I'm Fabio Oliveira, a 22-year-old programmer who caught the coding bug back in 2016. Right now, I'm in my fourth and final year of a computer programming apprenticeship.<br/>
+        Hey! I'm Fabio Oliveira, a 22-year-old programmer who got caught in the coding world back in 2016. Right now, I'm in my fourth and final year of a computer programming apprenticeship.<br/>
         When coding's not taking up my time, I'm diving into Destiny 2, Overwatch, or just hanging out with my friends in Discord.<br/>
         I've got this dream since I was a child of creating a with Unity, and I'm putting in the work to make it happen (when work is not draining all of my energy).
     </div>
