Update website content for enhanced information and accessibility
This commit makes a couple of changes aimed at improving user information and enhancing accessibility.
The alt attribute has been added to the website logo for improved web accessibility.
Certain text has been emphasized for clarity and hyperlinks have been added to games talked about enhancing user engagement.
Finally, the specific Discord tag was removed to maintain privacy.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container shadow">
     <span id="github" class="flex"><a href="https://github.com/Tsadriu" target="_blank"><i class="fa-brands fa-github"></i> MY GITHUB</a></span>
-    <img src="assets/images/logo.png" class="logo shadow">
+    <img src="assets/images/logo.png" class="logo shadow" alt="Logo of the website">
     <span class="logo-desc flex">
             <i>Tsadriu</i>
         </span>
@@ -26,8 +26,8 @@
     </div>
     <div>
         <h2 id="about-me">About me</h2>
-        Hey! I'm Fabio Oliveira, a 22-year-old programmer who got caught in the coding world back in 2016. Right now, I'm in my fourth and final year of a computer programming apprenticeship.<br/>
-        When coding's not taking up my time, I'm diving into Destiny 2, Overwatch, or just hanging out with my friends in Discord.<br/>
+        Hey! I'm Fabio Oliveira, a 22-year-old programmer who got caught in the coding world back in 2016. Right now, I'm in my fourth and <b>final year</b> of a computer programming apprenticeship.<br/>
+        When coding's not taking up my time, I'm diving into <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>, <a href="https://overwatch.blizzard.com/en-us/">Overwatch</a>, or just hanging out with my friends in Discord.<br/>
         I've got this dream since I was a child of creating a with Unity, and I'm putting in the work to make it happen (when work is not draining all of my energy).
     </div>
     <br>
@@ -100,7 +100,7 @@
         Find me on:
         <ul>
             <li><i class="fa fa-envelope"></i> Email: <a href="mailto:tsadriu@tsadriu.dev">tsadriu[at]tsadriu[dot]dev</a></li>
-            <li><i class="fa-brands fa-discord"></i> Discord: Tsadriu#4121</li>
+            <li><i class="fa-brands fa-discord"></i> Discord: Tsadriu</li>
             <li><i class="fa-brands fa-linkedin-in"></i> Linkedin: <a href="https://www.linkedin.com/in/fabio-oliveira-de-sousa-2328a21b5/">Fabio Oliveira</a></li>
             <li><i class="fa fa-coffee"></i> Ko-fi: <a href="https://ko-fi.com/tsadriu">Donate</a></li>
         </ul>
