Update personal info in 'About Me'
Corrected a sentence under 'About Me' section on index.html for better readability. The sentence previously lacked the proper context about the user's dream of creating a game using Unity. The updated version provides more clarity and improves sentence structure.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2 id="about-me">About me</h2>
         Hey! I'm Fabio Oliveira, a 22-year-old programmer who got caught in the coding world back in 2016. Right now, I'm in my fourth and <b>final year</b> of a computer programming apprenticeship.<br/>
         When coding's not taking up my time, I'm diving into <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>, <a href="https://overwatch.blizzard.com/en-us/">Overwatch</a>, or just hanging out with my friends in Discord.<br/>
-        I've got this dream since I was a child of creating a with Unity, and I'm putting in the work to make it happen (when work is not draining all of my energy).
+        I've had this dream of creating a game since I was a kid, and I'm making it a reality bit by bit (whenever work doesn't completely drain my energy).
     </div>
     <br>
     <hr>
