--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div>
         <h2 id="about-me">About me</h2>
-        Hey! I'm Fabio Oliveira, a 22-year-old programmer who got caught in the coding world back in 2016. Right now, I'm in my fourth and <b>final year</b> of a computer programming apprenticeship.<br/>
+        Hey! I'm Fabio Oliveira, a <span id="age"></span>-year-old programmer who got caught in the coding world back in 2016. Right now, I'm in my fourth and <b>final year</b> of a computer programming apprenticeship.<br/>
         When coding's not taking up my time, I'm diving into <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>, <a href="https://overwatch.blizzard.com/en-us/">Overwatch</a>, or just hanging out with my friends in Discord.<br/>
         I've had this dream of creating a game since I was a kid, and I'm making it a reality bit by bit (whenever work doesn't completely drain my energy).
     </div>
